# scb_open_banking_sdk

./: Cargo.toml  README.md
code_samples/accounts_inquiry/: account_details_and_balance.md  list_of_accounts.md
example/example_1/: Cargo.toml
example/example_1/src/: main.rs
example/example_1/src/accounts_inquiry/: account_details_and_balance.rs  account_details_and_balance_as_of.rs  account_details_and_balance_by_currency.rs  account_details_and_balance_query.rs  list_of_accounts.rs
example/example_1/src/corporate_financial_markets/rate_quotes/: rate_quotes_batch.rs  rate_quotes_by_currency_pair.rs  validate_quotes.rs
example/example_1/src/notifications_and_subscriptions/subscriptions/: subscriptions_create_update.rs  subscriptions_retrieve_all.rs  subscriptions_retrieve_by_notification_type.rs
example/example_1/src/reporting/: download_single_multiple_reports.rs
src/: lib.rs
src/accounts_inquiry/: account_details_and_balance.rs  account_details_and_balance_query.rs  list_of_accounts.rs
src/authorization/: generate_auth_token.rs
src/corporate_financial_markets/rate_quotes/: rate_quotes.rs
src/models/accounts_inquiry/: accounts_inquiry.rs
src/models/authorization/: auth_token.rs
src/models/corporate_financial_markets/rate_quotes/: rate_quotes.rs
src/models/reporting/: reporting.rs
src/notifications_and_subscriptions/subscriptions/: subscriptions_create_update.rs  subscriptions_retrieve_all.rs  subscriptions_retrieve_by_notification_type.rs
src/reporting/: reporting.rs
src/util/: util.rs
(+1 files in other folders)
