[package]
name = "scb_open_banking_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
chrono = "0.4.26"
base64 = "0.21.2"
tokio = { version = "1.32.0", features = ["macros"] }